welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value tfalse
while(fini=tfalse){
           ^BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while(fini=tfalse){
          ^BDRBuggle:7: error: not found: value avancer
	avancer();
        ^BDRBuggle:11: error: not found: value avancer
			avancer();
                        ^